--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
-    <div id="container"></div>
+    <div class="head">
+        <h1>Mini Mart</h1>
+    </div>
+    <div class="container-fluid products-grid py-4">
+        <div id="container"></div>
+    </div>
     
     
 
